issue has been resolve of items pizza is not in center align

--- a/app/home/categories/pizza/pizzacart.css
+++ b/app/home/categories/pizza/pizzacart.css
@@ -97,13 +97,6 @@
   margin-top: -2rem;
 }
 
-/* @media screen and (min-width: 320px) and (max-width: 352px) {
-  .pizza-price {
-    margin-top: -1.6rem;
-    margin-left: 0.8rem;
-  }
-} */
-
 @media screen and (min-width: 415px) and (max-width: 352px) {
   .main-pizza-price {
     margin-top: 6rem;
